Update notebook to force fresh clone and add explicit EOS token fix

--- a/notebooks/microglia_pruning_demo.ipynb
+++ b/notebooks/microglia_pruning_demo.ipynb
@@ -33,9 +33,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone repo\n",
+    "# Remove any existing clone and get fresh copy\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "if os.path.exists('/content/microglia-pruning'):\n",
+    "    shutil.rmtree('/content/microglia-pruning')\n",
+    "    print('Removed old clone')\n",
+    "\n",
+    "# Clone repo with latest code\n",
     "!git clone https://github.com/Tommaso-R-Marena/microglia-pruning.git\n",
-    "%cd microglia-pruning"
+    "%cd microglia-pruning\n",
+    "\n",
+    "# Verify we have latest commit\n",
+    "!git log --oneline -1"
    ]
   },
   {
@@ -64,7 +75,8 @@
     "import sys\n",
     "import time\n",
     "\n",
-    "sys.path.append('.')\n",
+    "# Make sure we're using the code from the cloned repo\n",
+    "sys.path.insert(0, '/content/microglia-pruning')\n",
     "\n",
     "from src.system import MicrogliaPruningSystem\n",
     "\n",
@@ -87,7 +99,9 @@
     "\n",
     "We're using Phi-3-Mini (3.8B parameters). It's small enough to run on a free Colab GPU but large enough to demonstrate meaningful pruning.\n",
     "\n",
-    "**Note:** This downloads ~7.5 GB. First time takes ~3-5 minutes."
+    "**Note:** This downloads ~7.5 GB. First time takes ~3-5 minutes.\n",
+    "\n",
+    "**Important:** You should see the message \"Fixing Phi-3 EOS token issue...\" - this fixes a known Phi-3 bug."
    ]
   },
   {
@@ -118,7 +132,9 @@
    "source": [
     "## Part 2: Test Baseline Performance\n",
     "\n",
-    "Before training, let's see how the base model performs on a few GSM8K problems."
+    "Before training, let's see how the base model performs on a few GSM8K problems.\n",
+    "\n",
+    "**You should now see proper answers** (not garbage like \"gemgemgem\")."
    ]
   },
   {
@@ -140,7 +156,7 @@
     "    prompt = f\"Question: {question}\\nAnswer:\"\n",
     "    \n",
     "    start = time.time()\n",
-    "    output = system.generate(prompt, max_new_tokens=150)\n",
+    "    output = system.generate(prompt, max_new_tokens=100)  # Reduced to 100 for speed\n",
     "    elapsed = time.time() - start\n",
     "    \n",
     "    # Extract just the answer part\n",
@@ -161,7 +177,9 @@
     "\n",
     "**Key idea:** The agents learn to identify \"dormant\" heads that don't contribute much to accuracy.\n",
     "\n",
-    "**Training time:** ~20-30 minutes on a T4 GPU for 3 epochs (enough to see the effect)"
+    "**Training time:** ~15-20 minutes on a T4 GPU for 3 epochs (enough to see the effect)\n",
+    "\n",
+    "**Memory optimized:** Should work on free T4 (15GB RAM)"
    ]
   },
   {
