--- a/notebooks/microglia_pruning_demo.ipynb
+++ b/notebooks/microglia_pruning_demo.ipynb
@@ -177,7 +177,7 @@
     "\n",
     "**Key idea:** The agents learn to identify \"dormant\" heads that don't contribute much to accuracy.\n",
     "\n",
-    "**Training time:** ~15-20 minutes on a T4 GPU for 3 epochs (enough to see the effect)\n",
+    "**Training time:** ~15-20 minutes on a T4 GPU for 3 epochs\n",
     "\n",
     "**Memory optimized:** Should work on free T4 (15GB RAM)"
    ]
@@ -197,7 +197,7 @@
     "    batch_size=2,  # Small batch size for memory efficiency\n",
     "    learning_rate=1e-4,\n",
     "    alpha_schedule=(0.01, 0.2),  # Start low, increase to encourage pruning\n",
-    "    use_lora=True  # Parameter-efficient fine-tuning\n",
+    "    use_lora=False  # Disabled for compatibility with wrapped attention\n",
     ")\n",
     "\n",
     "print(\"\\n✓ Training complete!\")"
@@ -237,7 +237,7 @@
     "    ax2.plot(epochs, [h['sparsity_loss'] for h in history], 'r-o', linewidth=2, markersize=8)\n",
     "    ax2.set_xlabel('Epoch', fontsize=12)\n",
     "    ax2.set_ylabel('Sparsity Loss', fontsize=12)\n",
-    "    ax2.set_title('Pruning Pressure', fontsize=13, fontweight='bold')\n",
+    "    ax2.set_title('Pruning Pressure', fontsize=13, fontweight='old')\n",
     "    ax2.grid(True, alpha=0.3)\n",
     "    \n",
     "    plt.tight_layout()\n",
@@ -435,7 +435,7 @@
     "    \n",
     "    answer = output.split(\"Answer:\")[-1].strip()[:150]\n",
     "    \n",
-    "    print(f\"{complexity.upper()} problem:\")\n",
+    "    print(f\"{complexity.UPPER()} problem:\")\n",
     "    print(f\"Sparsity: {sparsity:.1%}\")\n",
     "    print(f\"Answer: {answer}\")\n",
     "    print()\n",
@@ -527,7 +527,6 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.12"
   }
  },
