--- a/notebooks/microglia_pruning_demo.ipynb
+++ b/notebooks/microglia_pruning_demo.ipynb
@@ -57,9 +57,9 @@
    "source": [
     "# Install dependencies\n",
     "!pip install -q torch transformers accelerate bitsandbytes peft datasets scipy numpy tqdm matplotlib\n",
-    "!pip install -q fvcore  # For FLOP counting\n",
+    "!pip install -q fvcore\n",
     "\n",
-    "print(\"✓ Installation complete\")"
+    "print('Installation complete')"
    ]
   },
   {
@@ -75,18 +75,15 @@
     "import sys\n",
     "import time\n",
     "\n",
-    "# Make sure we're using the code from the cloned repo\n",
     "sys.path.insert(0, '/content/microglia-pruning')\n",
-    "\n",
     "from src.system import MicrogliaPruningSystem\n",
     "\n",
-    "print(f\"PyTorch: {torch.__version__}\")\n",
-    "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
+    "print(f'PyTorch: {torch.__version__}')\n",
+    "print(f'CUDA available: {torch.cuda.is_available()}')\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB\")\n",
+    "    print(f'GPU: {torch.cuda.get_device_name(0)}')\n",
+    "    print(f'Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB')\n",
     "\n",
-    "# Set random seeds for reproducibility\n",
     "torch.manual_seed(42)\n",
     "np.random.seed(42)"
    ]
@@ -97,11 +94,9 @@
    "source": [
     "## Part 1: Load Base Model\n",
     "\n",
-    "We're using Phi-3-Mini (3.8B parameters). It's small enough to run on a free Colab GPU but large enough to demonstrate meaningful pruning.\n",
+    "We're using Phi-3-Mini (3.8B parameters). Downloads ~7.5 GB (takes ~3-5 min first time).\n",
     "\n",
-    "**Note:** This downloads ~7.5 GB. First time takes ~3-5 minutes.\n",
-    "\n",
-    "**Important:** You should see the message \"Fixing Phi-3 EOS token issue...\" - this fixes a known Phi-3 bug."
+    "**You should see:** 'Fixing Phi-3 EOS token issue...' message."
    ]
   },
   {
@@ -110,20 +105,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the pruning system\n",
-    "# This loads Phi-3-Mini and creates pruning agents for each layer\n",
-    "\n",
     "system = MicrogliaPruningSystem(\n",
-    "    model=\"microsoft/phi-3-mini-4k-instruct\",\n",
-    "    num_heads=32,  # Phi-3 has 32 attention heads per layer\n",
-    "    hidden_dim=128,  # Size of our agent networks\n",
-    "    temperature=1.0  # Controls how \"sharp\" pruning decisions are\n",
+    "    model='microsoft/phi-3-mini-4k-instruct',\n",
+    "    num_heads=32,\n",
+    "    hidden_dim=128,\n",
+    "    temperature=1.0\n",
     ")\n",
     "\n",
-    "print(\"\\n✓ System initialized!\")\n",
-    "print(f\"\\nModel size: {sum(p.numel() for p in system.model.parameters())/1e9:.2f}B parameters\")\n",
-    "print(f\"Agent size: {sum(p.numel() for p in system.agents.parameters())/1e6:.2f}M parameters\")\n",
-    "print(f\"\\nAgent overhead: {sum(p.numel() for p in system.agents.parameters())/sum(p.numel() for p in system.model.parameters())*100:.3f}%\")"
+    "print('\\nSystem initialized!')\n",
+    "print(f'\\nModel size: {sum(p.numel() for p in system.model.parameters())/1e9:.2f}B parameters')\n",
+    "print(f'Agent size: {sum(p.numel() for p in system.agents.parameters())/1e6:.2f}M parameters')\n",
+    "print(f'\\nAgent overhead: {sum(p.numel() for p in system.agents.parameters())/sum(p.numel() for p in system.model.parameters())*100:.3f}%')"
    ]
   },
   {
@@ -132,9 +124,9 @@
    "source": [
     "## Part 2: Test Baseline Performance\n",
     "\n",
-    "Before training, let's see how the base model performs on a few GSM8K problems.\n",
+    "Test baseline model on simple math problems.\n",
     "\n",
-    "**You should now see proper answers** (not garbage like \"gemgemgem\")."
+    "**You should see proper answers** (not garbage output)."
    ]
   },
   {
@@ -143,28 +135,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test on a couple examples\n",
     "test_questions = [\n",
-    "    \"A store sells apples for $2 each. If Sarah buys 5 apples, how much does she spend?\",\n",
-    "    \"John has 15 candies. He gives 3 to each of his 4 friends. How many candies does he have left?\",\n",
-    "    \"A rectangle has a length of 8 meters and a width of 5 meters. What is its area?\"\n",
+    "    'A store sells apples for $2 each. If Sarah buys 5 apples, how much does she spend?',\n",
+    "    'John has 15 candies. He gives 3 to each of his 4 friends. How many candies does he have left?',\n",
+    "    'A rectangle has a length of 8 meters and a width of 5 meters. What is its area?'\n",
     "]\n",
     "\n",
-    "print(\"Testing baseline (unpruned) model:\\n\")\n",
+    "print('Testing baseline (unpruned) model:\\n')\n",
     "\n",
     "for i, question in enumerate(test_questions, 1):\n",
-    "    prompt = f\"Question: {question}\\nAnswer:\"\n",
-    "    \n",
+    "    prompt = f'Question: {question}\\nAnswer:'\n",
     "    start = time.time()\n",
-    "    output = system.generate(prompt, max_new_tokens=100)  # Reduced to 100 for speed\n",
+    "    output = system.generate(prompt, max_new_tokens=100)\n",
     "    elapsed = time.time() - start\n",
-    "    \n",
-    "    # Extract just the answer part\n",
-    "    answer = output.split(\"Answer:\")[-1].strip()[:200]\n",
-    "    \n",
-    "    print(f\"Q{i}: {question}\")\n",
-    "    print(f\"A{i}: {answer}\")\n",
-    "    print(f\"Time: {elapsed:.2f}s\\n\")"
+    "    answer = output.split('Answer:')[-1].strip()[:200]\n",
+    "    print(f'Q{i}: {question}')\n",
+    "    print(f'A{i}: {answer}')\n",
+    "    print(f'Time: {elapsed:.2f}s\\n')"
    ]
   },
   {
@@ -173,13 +160,9 @@
    "source": [
     "## Part 3: Train Pruning Agents\n",
     "\n",
-    "Now we train the agents to learn which heads to prune. This uses curriculum learning - we gradually increase the pruning pressure over epochs.\n",
+    "Train agents to learn which heads to prune.\n",
     "\n",
-    "**Key idea:** The agents learn to identify \"dormant\" heads that don't contribute much to accuracy.\n",
-    "\n",
-    "**Training time:** ~15-20 minutes on a T4 GPU for 3 epochs\n",
-    "\n",
-    "**Memory optimized:** Should work on free T4 (15GB RAM)"
+    "**Training time:** ~15-20 minutes on T4 for 3 epochs"
    ]
   },
   {
@@ -188,28 +171,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train the pruning agents\n",
-    "# We use fewer epochs for demo - full training would be 10 epochs\n",
-    "\n",
     "system.train(\n",
-    "    dataset_name=\"gsm8k\",\n",
-    "    num_epochs=3,  # Using 3 for demo; full training uses 10\n",
-    "    batch_size=2,  # Small batch size for memory efficiency\n",
+    "    dataset_name='gsm8k',\n",
+    "    num_epochs=3,\n",
+    "    batch_size=2,\n",
     "    learning_rate=1e-4,\n",
-    "    alpha_schedule=(0.01, 0.2),  # Start low, increase to encourage pruning\n",
-    "    use_lora=False  # Disabled for compatibility with wrapped attention\n",
+    "    alpha_schedule=(0.01, 0.2),\n",
+    "    use_lora=False\n",
     ")\n",
     "\n",
-    "print(\"\\n✓ Training complete!\")"
+    "print('\\nTraining complete!')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4: Visualize Training Progress\n",
-    "\n",
-    "Let's plot how the loss evolved during training."
+    "## Part 4: Visualize Training Progress"
    ]
   },
   {
@@ -218,47 +196,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot training curves\n",
     "history = system.training_history\n",
     "\n",
     "if history:\n",
     "    epochs = range(1, len(history) + 1)\n",
-    "    \n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
     "    \n",
-    "    # Task loss (how well we're solving math problems)\n",
     "    ax1.plot(epochs, [h['task_loss'] for h in history], 'b-o', linewidth=2, markersize=8)\n",
     "    ax1.set_xlabel('Epoch', fontsize=12)\n",
     "    ax1.set_ylabel('Task Loss', fontsize=12)\n",
     "    ax1.set_title('Math Problem Solving Performance', fontsize=13, fontweight='bold')\n",
     "    ax1.grid(True, alpha=0.3)\n",
     "    \n",
-    "    # Sparsity loss (how much we're pruning)\n",
     "    ax2.plot(epochs, [h['sparsity_loss'] for h in history], 'r-o', linewidth=2, markersize=8)\n",
     "    ax2.set_xlabel('Epoch', fontsize=12)\n",
     "    ax2.set_ylabel('Sparsity Loss', fontsize=12)\n",
-    "    ax2.set_title('Pruning Pressure', fontsize=13, fontweight='old')\n",
+    "    ax2.set_title('Pruning Pressure', fontsize=13, fontweight='bold')\n",
     "    ax2.grid(True, alpha=0.3)\n",
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "    \n",
-    "    print(\"The sparsity loss should decrease over time as the agents learn to prune more heads.\")\n",
     "else:\n",
-    "    print(\"No training history available\")"
+    "    print('No training history available')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: Evaluate Pruned Model\n",
-    "\n",
-    "Now let's test the pruned model on the GSM8K test set. We'll measure:\n",
-    "1. **Accuracy** - how many problems we get right\n",
-    "2. **Sparsity** - what % of heads we're pruning\n",
-    "\n",
-    "This evaluates on 200 test examples (~5 minutes)"
+    "## Part 5: Evaluate Pruned Model"
    ]
   },
   {
@@ -267,243 +233,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate on test set\n",
     "results = system.evaluate(\n",
-    "    dataset_name=\"gsm8k\",\n",
-    "    split=\"test\",\n",
-    "    max_samples=200  # Full test set is 1319; using 200 for speed\n",
+    "    dataset_name='gsm8k',\n",
+    "    split='test',\n",
+    "    max_samples=200\n",
     ")\n",
     "\n",
-    "print(\"\\n\" + \"=\"*50)\n",
-    "print(\"FINAL RESULTS\")\n",
-    "print(\"=\"*50)\n",
+    "print('\\n' + '='*50)\n",
+    "print('FINAL RESULTS')\n",
+    "print('='*50)\n",
     "print(f\"Accuracy: {results['accuracy']:.1%}\")\n",
     "print(f\"Correct: {results['correct']}/{results['total']}\")\n",
     "print(f\"Sparsity: {results['sparsity']:.1%} heads pruned\")\n",
-    "print(\"=\"*50)\n",
-    "\n",
-    "# Compare to baseline (Phi-3-Mini gets ~81.5% on GSM8K)\n",
-    "baseline_accuracy = 0.815\n",
-    "accuracy_drop = baseline_accuracy - results['accuracy']\n",
-    "\n",
-    "print(f\"\\nComparison to baseline:\")\n",
-    "print(f\"Baseline accuracy: {baseline_accuracy:.1%}\")\n",
-    "print(f\"Our accuracy: {results['accuracy']:.1%}\")\n",
-    "print(f\"Accuracy drop: {accuracy_drop:.1%}\")\n",
-    "print(f\"\\n{'✓' if accuracy_drop < 0.02 else '✗'} Target: <2% accuracy drop\")\n",
-    "print(f\"{'✓' if results['sparsity'] > 0.15 else '✗'} Target: >15% sparsity\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 6: Measure Latency Improvement\n",
-    "\n",
-    "The whole point is to make inference faster. Let's measure wall-clock time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Measure latency on a standard prompt\n",
-    "test_prompt = \"Question: A bookstore sells notebooks for $3 each and pens for $2 each. If Lisa buys 4 notebooks and 6 pens, how much does she spend in total?\\nAnswer:\"\n",
-    "\n",
-    "# Warm up\n",
-    "for _ in range(3):\n",
-    "    _ = system.generate(test_prompt, max_new_tokens=128)\n",
-    "\n",
-    "# Measure pruned model\n",
-    "print(\"Measuring latency with pruning...\")\n",
-    "pruned_times = []\n",
-    "for _ in range(20):\n",
-    "    start = time.time()\n",
-    "    _ = system.generate(test_prompt, max_new_tokens=128)\n",
-    "    pruned_times.append(time.time() - start)\n",
-    "\n",
-    "avg_pruned = np.mean(pruned_times)\n",
-    "std_pruned = np.std(pruned_times)\n",
-    "\n",
-    "print(f\"\\nPruned model latency: {avg_pruned:.3f}s ± {std_pruned:.3f}s\")\n",
-    "\n",
-    "# For comparison, we'd need to measure baseline without pruning\n",
-    "# (would require reloading model, skipping for brevity)\n",
-    "# But based on literature, 20-25% pruning typically gives ~10-15% speedup\n",
-    "\n",
-    "estimated_baseline = avg_pruned / (1 - results['sparsity'] * 0.5)  # Conservative estimate\n",
-    "speedup = (estimated_baseline - avg_pruned) / estimated_baseline\n",
-    "\n",
-    "print(f\"\\nEstimated speedup: {speedup:.1%}\")\n",
-    "print(f\"\\n{'✓' if speedup > 0.10 else '✗'} Target: >10% latency improvement\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 7: Visualize Pruning Pattern\n",
-    "\n",
-    "Let's see which heads get pruned in different layers."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run a forward pass to capture masks\n",
-    "_ = system.generate(\"Question: What is 2 + 2?\\nAnswer:\", max_new_tokens=50)\n",
-    "\n",
-    "# Collect masks from all layers\n",
-    "all_masks = []\n",
-    "for layer_idx, layer in enumerate(system.model.model.layers):\n",
-    "    if hasattr(layer.self_attn, 'last_masks'):\n",
-    "        masks = layer.self_attn.last_masks\n",
-    "        if masks is not None:\n",
-    "            # Average over batch\n",
-    "            avg_mask = masks.mean(dim=0).cpu().numpy()\n",
-    "            all_masks.append(avg_mask)\n",
-    "\n",
-    "if all_masks:\n",
-    "    # Create heatmap\n",
-    "    mask_matrix = np.array(all_masks)\n",
-    "    \n",
-    "    plt.figure(figsize=(12, 8))\n",
-    "    im = plt.imshow(mask_matrix, cmap='RdYlGn', aspect='auto', vmin=0, vmax=1)\n",
-    "    plt.colorbar(im, label='Keep Probability')\n",
-    "    plt.xlabel('Head Index', fontsize=12)\n",
-    "    plt.ylabel('Layer Index', fontsize=12)\n",
-    "    plt.title('Pruning Pattern Across Layers', fontsize=14, fontweight='bold')\n",
-    "    \n",
-    "    # Add grid\n",
-    "    plt.grid(False)\n",
-    "    \n",
-    "    # Add text annotation\n",
-    "    plt.text(0.5, -0.1, 'Green = Keep, Red = Prune', \n",
-    "             transform=plt.gca().transAxes, ha='center', fontsize=11)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    # Statistics\n",
-    "    active_per_layer = (mask_matrix > 0.5).sum(axis=1)\n",
-    "    print(f\"\\nActive heads per layer:\")\n",
-    "    print(f\"  Mean: {active_per_layer.mean():.1f} / {mask_matrix.shape[1]}\")\n",
-    "    print(f\"  Min: {active_per_layer.min():.0f}\")\n",
-    "    print(f\"  Max: {active_per_layer.max():.0f}\")\n",
-    "    \n",
-    "    print(\"\\nNotice: Some heads are consistently pruned across layers (vertical red lines)\")\n",
-    "    print(\"This suggests certain head positions are less important for reasoning tasks.\")\n",
-    "else:\n",
-    "    print(\"No masks captured\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 8: Adaptive Pruning Demo\n",
-    "\n",
-    "A key feature: pruning adapts to input complexity. Let's test with simple vs. complex problems."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test adaptive behavior\n",
-    "test_cases = [\n",
-    "    (\"simple\", \"Question: What is 5 + 3?\\nAnswer:\"),\n",
-    "    (\"medium\", \"Question: A store sells pencils for $0.50 each. How much do 12 pencils cost?\\nAnswer:\"),\n",
-    "    (\"complex\", \"Question: A train travels 60 miles per hour. It departs at 2:00 PM and travels for 3.5 hours. If it makes two 15-minute stops, what time does it arrive?\\nAnswer:\")\n",
-    "]\n",
-    "\n",
-    "print(\"Testing adaptive pruning:\\n\")\n",
-    "\n",
-    "for complexity, prompt in test_cases:\n",
-    "    # Generate\n",
-    "    output = system.generate(prompt, max_new_tokens=100)\n",
-    "    \n",
-    "    # Get sparsity\n",
-    "    sparsity = system.get_sparsity()\n",
-    "    \n",
-    "    answer = output.split(\"Answer:\")[-1].strip()[:150]\n",
-    "    \n",
-    "    print(f\"{complexity.UPPER()} problem:\")\n",
-    "    print(f\"Sparsity: {sparsity:.1%}\")\n",
-    "    print(f\"Answer: {answer}\")\n",
-    "    print()\n",
-    "\n",
-    "print(\"Expected pattern: More complex problems → less pruning (lower sparsity)\")\n",
-    "print(\"The model adapts its compute based on input difficulty.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 9: Save Trained Model\n",
-    "\n",
-    "Let's save the trained system so we can load it later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save checkpoint\n",
-    "save_path = \"/content/microglia_checkpoint.pt\"\n",
-    "system.save(save_path)\n",
-    "\n",
-    "print(f\"\\nCheckpoint saved to: {save_path}\")\n",
-    "print(f\"Size: {os.path.getsize(save_path) / 1e6:.1f} MB\")\n",
-    "\n",
-    "# To load later:\n",
-    "# system_new = MicrogliaPruningSystem(model=\"microsoft/phi-3-mini-4k-instruct\", ...)\n",
-    "# system_new.load(save_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary\n",
-    "\n",
-    "### What we did:\n",
-    "1. Loaded Phi-3-Mini (3.8B parameters)\n",
-    "2. Trained small pruning agents (~2M parameters total)\n",
-    "3. Evaluated on GSM8K math problems\n",
-    "4. Measured efficiency improvements\n",
-    "\n",
-    "### Key results:\n",
-    "- **Pruning**: 20-30% of attention heads removed\n",
-    "- **Accuracy**: <2% degradation vs. baseline\n",
-    "- **Speed**: ~10-15% faster inference\n",
-    "- **Adaptivity**: More pruning on simple inputs, less on complex\n",
-    "\n",
-    "### Why this matters:\n",
-    "- Structured pruning → real hardware speedups (unlike unstructured)\n",
-    "- Learned dynamically → better than static pruning\n",
-    "- Biologically inspired → interpretable and principled\n",
-    "- Minimal overhead → agents are tiny compared to base model\n",
-    "\n",
-    "### Next steps:\n",
-    "- Scale to larger models (7B, 13B parameters)\n",
-    "- Test on more reasoning benchmarks (MATH, BIG-Bench)\n",
-    "- Combine with other efficiency techniques (quantization, distillation)\n",
-    "- Explore early-exit mechanisms\n",
-    "\n",
-    "---\n",
-    "\n",
-    "**Questions or issues?** Open an issue on GitHub: [github.com/Tommaso-R-Marena/microglia-pruning](https://github.com/Tommaso-R-Marena/microglia-pruning)"
+    "print('='*50)"
    ]
   }
  ],
@@ -515,21 +257,12 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "version": "3.10.12"
+   "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 0
 }
