REVERT: Restore full working notebook from commit 11572406

--- a/notebooks/microglia_pruning_demo.ipynb
+++ b/notebooks/microglia_pruning_demo.ipynb
@@ -57,9 +57,9 @@
    "source": [
     "# Install dependencies\n",
     "!pip install -q torch transformers accelerate bitsandbytes peft datasets scipy numpy tqdm matplotlib\n",
-    "!pip install -q fvcore\n",
+    "!pip install -q fvcore  # For FLOP counting\n",
     "\n",
-    "print('Installation complete')"
+    "print(\"✓ Installation complete\")"
    ]
   },
   {
@@ -75,15 +75,18 @@
     "import sys\n",
     "import time\n",
     "\n",
+    "# Make sure we're using the code from the cloned repo\n",
     "sys.path.insert(0, '/content/microglia-pruning')\n",
+    "\n",
     "from src.system import MicrogliaPruningSystem\n",
     "\n",
-    "print(f'PyTorch: {torch.__version__}')\n",
-    "print(f'CUDA available: {torch.cuda.is_available()}')\n",
+    "print(f\"PyTorch: {torch.__version__}\")\n",
+    "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f'GPU: {torch.cuda.get_device_name(0)}')\n",
-    "    print(f'Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB')\n",
+    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
+    "    print(f\"Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.1f} GB\")\n",
     "\n",
+    "# Set random seeds for reproducibility\n",
     "torch.manual_seed(42)\n",
     "np.random.seed(42)"
    ]
@@ -94,9 +97,11 @@
    "source": [
     "## Part 1: Load Base Model\n",
     "\n",
-    "We're using Phi-3-Mini (3.8B parameters). Downloads ~7.5 GB (takes ~3-5 min first time).\n",
+    "We're using Phi-3-Mini (3.8B parameters). It's small enough to run on a free Colab GPU but large enough to demonstrate meaningful pruning.\n",
     "\n",
-    "**You should see:** 'Fixing Phi-3 EOS token issue...' message."
+    "**Note:** This downloads ~7.5 GB. First time takes ~3-5 minutes.\n",
+    "\n",
+    "**Important:** You should see the message \"Fixing Phi-3 EOS token issue...\" - this fixes a known Phi-3 bug."
    ]
   },
   {
@@ -105,17 +110,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize the pruning system\n",
+    "# This loads Phi-3-Mini and creates pruning agents for each layer\n",
+    "\n",
     "system = MicrogliaPruningSystem(\n",
-    "    model='microsoft/phi-3-mini-4k-instruct',\n",
-    "    num_heads=32,\n",
-    "    hidden_dim=128,\n",
-    "    temperature=1.0\n",
+    "    model=\"microsoft/phi-3-mini-4k-instruct\",\n",
+    "    num_heads=32,  # Phi-3 has 32 attention heads per layer\n",
+    "    hidden_dim=128,  # Size of our agent networks\n",
+    "    temperature=1.0  # Controls how \"sharp\" pruning decisions are\n",
     ")\n",
     "\n",
-    "print('\\nSystem initialized!')\n",
-    "print(f'\\nModel size: {sum(p.numel() for p in system.model.parameters())/1e9:.2f}B parameters')\n",
-    "print(f'Agent size: {sum(p.numel() for p in system.agents.parameters())/1e6:.2f}M parameters')\n",
-    "print(f'\\nAgent overhead: {sum(p.numel() for p in system.agents.parameters())/sum(p.numel() for p in system.model.parameters())*100:.3f}%')"
+    "print(\"\\n✓ System initialized!\")\n",
+    "print(f\"\\nModel size: {sum(p.numel() for p in system.model.parameters())/1e9:.2f}B parameters\")\n",
+    "print(f\"Agent size: {sum(p.numel() for p in system.agents.parameters())/1e6:.2f}M parameters\")\n",
+    "print(f\"\\nAgent overhead: {sum(p.numel() for p in system.agents.parameters())/sum(p.numel() for p in system.model.parameters())*100:.3f}%\")"
    ]
   },
   {
@@ -124,9 +132,9 @@
    "source": [
     "## Part 2: Test Baseline Performance\n",
     "\n",
-    "Test baseline model on simple math problems.\n",
+    "Before training, let's see how the base model performs on a few GSM8K problems.\n",
     "\n",
-    "**You should see proper answers** (not garbage output)."
+    "**You should now see proper answers** (not garbage like \"gemgemgem\")."
    ]
   },
   {
@@ -135,23 +143,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test on a couple examples\n",
     "test_questions = [\n",
-    "    'A store sells apples for $2 each. If Sarah buys 5 apples, how much does she spend?',\n",
-    "    'John has 15 candies. He gives 3 to each of his 4 friends. How many candies does he have left?',\n",
-    "    'A rectangle has a length of 8 meters and a width of 5 meters. What is its area?'\n",
+    "    \"A store sells apples for $2 each. If Sarah buys 5 apples, how much does she spend?\",\n",
+    "    \"John has 15 candies. He gives 3 to each of his 4 friends. How many candies does he have left?\",\n",
+    "    \"A rectangle has a length of 8 meters and a width of 5 meters. What is its area?\"\n",
     "]\n",
     "\n",
-    "print('Testing baseline (unpruned) model:\\n')\n",
+    "print(\"Testing baseline (unpruned) model:\\n\")\n",
     "\n",
     "for i, question in enumerate(test_questions, 1):\n",
-    "    prompt = f'Question: {question}\\nAnswer:'\n",
+    "    prompt = f\"Question: {question}\\nAnswer:\"\n",
+    "    \n",
     "    start = time.time()\n",
-    "    output = system.generate(prompt, max_new_tokens=100)\n",
+    "    output = system.generate(prompt, max_new_tokens=100)  # Reduced to 100 for speed\n",
     "    elapsed = time.time() - start\n",
-    "    answer = output.split('Answer:')[-1].strip()[:200]\n",
-    "    print(f'Q{i}: {question}')\n",
-    "    print(f'A{i}: {answer}')\n",
-    "    print(f'Time: {elapsed:.2f}s\\n')"
+    "    \n",
+    "    # Extract just the answer part\n",
+    "    answer = output.split(\"Answer:\")[-1].strip()[:200]\n",
+    "    \n",
+    "    print(f\"Q{i}: {question}\")\n",
+    "    print(f\"A{i}: {answer}\")\n",
+    "    print(f\"Time: {elapsed:.2f}s\\n\")"
    ]
   },
   {
@@ -160,9 +173,13 @@
    "source": [
     "## Part 3: Train Pruning Agents\n",
     "\n",
-    "Train agents to learn which heads to prune.\n",
+    "Now we train the agents to learn which heads to prune. This uses curriculum learning - we gradually increase the pruning pressure over epochs.\n",
     "\n",
-    "**Training time:** ~15-20 minutes on T4 for 3 epochs"
+    "**Key idea:** The agents learn to identify \"dormant\" heads that don't contribute much to accuracy.\n",
+    "\n",
+    "**Training time:** ~15-20 minutes on a T4 GPU for 3 epochs\n",
+    "\n",
+    "**Memory optimized:** Should work on free T4 (15GB RAM)"
    ]
   },
   {
@@ -171,23 +188,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Train the pruning agents\n",
+    "# We use fewer epochs for demo - full training would be 10 epochs\n",
+    "\n",
     "system.train(\n",
-    "    dataset_name='gsm8k',\n",
-    "    num_epochs=3,\n",
-    "    batch_size=2,\n",
+    "    dataset_name=\"gsm8k\",\n",
+    "    num_epochs=3,  # Using 3 for demo; full training uses 10\n",
+    "    batch_size=2,  # Small batch size for memory efficiency\n",
     "    learning_rate=1e-4,\n",
-    "    alpha_schedule=(0.01, 0.2),\n",
-    "    use_lora=False\n",
+    "    alpha_schedule=(0.01, 0.2),  # Start low, increase to encourage pruning\n",
+    "    use_lora=False  # Disabled for compatibility with wrapped attention\n",
     ")\n",
     "\n",
-    "print('\\nTraining complete!')"
+    "print(\"\\n✓ Training complete!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 4: Visualize Training Progress"
+    "## Part 4: Visualize Training Progress\n",
+    "\n",
+    "Let's plot how the loss evolved during training."
    ]
   },
   {
@@ -196,18 +218,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot training curves\n",
     "history = system.training_history\n",
     "\n",
     "if history:\n",
     "    epochs = range(1, len(history) + 1)\n",
+    "    \n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 5))\n",
     "    \n",
+    "    # Task loss (how well we're solving math problems)\n",
     "    ax1.plot(epochs, [h['task_loss'] for h in history], 'b-o', linewidth=2, markersize=8)\n",
     "    ax1.set_xlabel('Epoch', fontsize=12)\n",
     "    ax1.set_ylabel('Task Loss', fontsize=12)\n",
     "    ax1.set_title('Math Problem Solving Performance', fontsize=13, fontweight='bold')\n",
     "    ax1.grid(True, alpha=0.3)\n",
     "    \n",
+    "    # Sparsity loss (how much we're pruning)\n",
     "    ax2.plot(epochs, [h['sparsity_loss'] for h in history], 'r-o', linewidth=2, markersize=8)\n",
     "    ax2.set_xlabel('Epoch', fontsize=12)\n",
     "    ax2.set_ylabel('Sparsity Loss', fontsize=12)\n",
@@ -216,15 +242,23 @@
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "    \n",
+    "    print(\"The sparsity loss should decrease over time as the agents learn to prune more heads.\")\n",
     "else:\n",
-    "    print('No training history available')"
+    "    print(\"No training history available\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 5: Evaluate Pruned Model"
+    "## Part 5: Evaluate Pruned Model\n",
+    "\n",
+    "Now let's test the pruned model on the GSM8K test set. We'll measure:\n",
+    "1. **Accuracy** - how many problems we get right\n",
+    "2. **Sparsity** - what % of heads we're pruning\n",
+    "\n",
+    "This evaluates on 200 test examples (~5 minutes)"
    ]
   },
   {
@@ -233,19 +267,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Evaluate on test set\n",
     "results = system.evaluate(\n",
-    "    dataset_name='gsm8k',\n",
-    "    split='test',\n",
-    "    max_samples=200\n",
+    "    dataset_name=\"gsm8k\",\n",
+    "    split=\"test\",\n",
+    "    max_samples=200  # Full test set is 1319; using 200 for speed\n",
     ")\n",
     "\n",
-    "print('\\n' + '='*50)\n",
-    "print('FINAL RESULTS')\n",
-    "print('='*50)\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"FINAL RESULTS\")\n",
+    "print(\"=\"*50)\n",
     "print(f\"Accuracy: {results['accuracy']:.1%}\")\n",
     "print(f\"Correct: {results['correct']}/{results['total']}\")\n",
     "print(f\"Sparsity: {results['sparsity']:.1%} heads pruned\")\n",
-    "print('='*50)"
+    "print(\"=\"*50)\n",
+    "\n",
+    "# Compare to baseline (Phi-3-Mini gets ~81.5% on GSM8K)\n",
+    "baseline_accuracy = 0.815\n",
+    "accuracy_drop = baseline_accuracy - results['accuracy']\n",
+    "\n",
+    "print(f\"\\nComparison to baseline:\")\n",
+    "print(f\"Baseline accuracy: {baseline_accuracy:.1%}\")\n",
+    "print(f\"Our accuracy: {results['accuracy']:.1%}\")\n",
+    "print(f\"Accuracy drop: {accuracy_drop:.1%}\")\n",
+    "print(f\"\\n{'✓' if accuracy_drop < 0.02 else '✗'} Target: <2% accuracy drop\")\n",
+    "print(f\"{'✓' if results['sparsity'] > 0.15 else '✗'} Target: >15% sparsity\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "### What we did:\n",
+    "1. Loaded Phi-3-Mini (3.8B parameters)\n",
+    "2. Trained small pruning agents (~2M parameters total)\n",
+    "3. Evaluated on GSM8K math problems\n",
+    "4. Measured efficiency improvements\n",
+    "\n",
+    "### Key results:\n",
+    "- **Pruning**: 20-30% of attention heads removed\n",
+    "- **Accuracy**: <2% degradation vs. baseline\n",
+    "- **Speed**: ~10-15% faster inference\n",
+    "- **Adaptivity**: More pruning on simple inputs, less on complex\n",
+    "\n",
+    "### Why this matters:\n",
+    "- Structured pruning → real hardware speedups (unlike unstructured)\n",
+    "- Learned dynamically → better than static pruning\n",
+    "- Biologically inspired → interpretable and principled\n",
+    "- Minimal overhead → agents are tiny compared to base model\n",
+    "\n",
+    "### Next steps:\n",
+    "- Scale to larger models (7B, 13B parameters)\n",
+    "- Test on more reasoning benchmarks (MATH, BIG-Bench)\n",
+    "- Combine with other efficiency techniques (quantization, distillation)\n",
+    "- Explore early-exit mechanisms\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Questions or issues?** Open an issue on GitHub: [github.com/Tommaso-R-Marena/microglia-pruning](https://github.com/Tommaso-R-Marena/microglia-pruning)"
    ]
   }
  ],
@@ -257,12 +338,21 @@
   },
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
